--- a/index.html
+++ b/index.html
@@ -2,9 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="src/assets/favicon//favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Alana Barrett-Frew</title>
+     <!-- Favicon -->
+     <link
+     rel="apple-touch-icon"
+     sizes="180x180"
+     href="/src/assets/favicon/apple-touch-icon.png"
+   />
+   <link
+     rel="icon"
+     type="image/png"
+     sizes="32x32"
+     href="/src/assets/favicon/favicon-32x32.png"
+   />
+   <link
+     rel="icon"
+     type="image/png"
+     sizes="16x16"
+     href="src/assets/favicon/favicon-16x16.png"
+   />
+
+   <link rel="manifest" href="./src/assets/favicon/site.webmanifest" />
+
+   <meta name="apple-mobile-web-app-title" content="AlanaBF Portfolio" />
+   <meta name="application-name" content="Alana Barrett-Frew" />
+   <meta name="msapplication-TileColor" content="#da532c" />
+
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/201aa93ea7.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Open+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+      <!-- Stylesheet -->
+      <link rel="stylesheet" href="/src/index.css" />
   </head>
   <body>
     <div id="root"></div>
