--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Open+Sans:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Open+Sans:wght@600&display=swap"
       rel="stylesheet"
     />
+    <!-- Bootstrap Style Sheet -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> -->
+  
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/src/index.css" />
   </head>
