--- a/index.html
+++ b/index.html
@@ -28,16 +28,19 @@
 
   <!-- Stylesheet -->
   <link rel="stylesheet" href="src/assets/styles/styles.css" />
-  
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T7BJBZF8V7"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-T7BJBZF8V7');
-  </script>
+ 
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VZ5LVL2ETP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VZ5LVL2ETP');
+</script>
+
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
