professional project added and freelance pages deleted

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
   <!-- Stylesheet -->
   <link rel="stylesheet" href="src/assets/styles/styles.css" />
  
+   <!-- Open Graph meta tags -->
+   <meta property="og:title" content="Alana Portfolio" />
+   <meta
+     property="og:description"
+     content="A portfolio showcasing my web development projects."
+   />
+   <meta property="og:image" content="/Alana_background.png" />
+   <meta property="og:url" content="alanabarrettfrew.com" />
+   <meta property="og:type" content="website" />
 </head>
 
 <body>
