--- a/index.html
+++ b/index.html
@@ -14,23 +14,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alana Barrett-Frew</title>
-  <link rel="icon" type="image/png" href="/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/public/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon/favicon-16x16.png">
   <link rel="manifest" href="./src/assets/favicon/site.webmanifest">
 
-  <meta name="apple-mobile-web-app-title" content="AlanaBF Portfolio" />
+  <meta name="apple-mobile-web-app-title" content="Alana Barrett-Frew Business Site" />
   <meta name="application-name" content="Alana Barrett-Frew" />
   <meta name="msapplication-TileColor" content="#da532c" />
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Fuzzy+Bubbles:wght@700&display=swap" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@900&display=swap" rel="stylesheet"/>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Handlee&display=swap"
+    rel="stylesheet"
+  />
+
   
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous" />
