edits added to style changes

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
   <link rel="stylesheet" href="src/assets/styles/styles.css" />
  
    <!-- Open Graph meta tags -->
-   <meta property="og:title" content="Alana Portfolio" />
+   <meta property="og:title" content="Alana Barrett-Frew" />
    <meta
      property="og:description"
-     content="A portfolio showcasing my web development projects."
+     content="A website showcasing myself and my projects."
    />
-   <meta property="og:image" content="/Alana_background.png" />
+   <meta property="og:image" content="/favicon/apple-touch-icon.png" />
    <meta property="og:url" content="alanabarrettfrew.com" />
    <meta property="og:type" content="website" />
 </head>
