--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alana Barrett-Frew</title>
   <link rel="icon" type="image/png" href="/favicon/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/public/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon/favicon-16x16.png">
-  <link rel="manifest" href="./src/assets/favicon/site.webmanifest">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon-16x16.png">
+  <link rel="manifest" href="/src/assets/favicon/site.webmanifest">
+
+
+
+
 
   <meta name="apple-mobile-web-app-title" content="Alana Barrett-Frew Business Site" />
   <meta name="application-name" content="Alana Barrett-Frew" />
