bug fixed favicon

--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VZ5LVL2ETP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-VZ5LVL2ETP');
-</script>
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alana Barrett-Frew</title>
-  <link rel="icon" type="image/png" href="/favicon/favicon.ico" />
+  <link rel="icon" type="image/png" href="/public/favicon/favicon.ico" />
 
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon-32x32.png">
@@ -51,10 +43,20 @@
      property="og:description"
      content="A website showcasing myself and my projects."
    />
-   <meta property="og:image" content="/favicon/apple-touch-icon.png" />
+   <meta property="og:image" content="/public/favicon/apple-touch-icon.png" />
    <meta property="og:url" content="alanabarrettfrew.com" />
    <meta property="og:type" content="website" />
-</head>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VZ5LVL2ETP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-VZ5LVL2ETP');
+  </script>
+  </head>
 
 <body>
   <div id="root"></div>
