--- a/index.html
+++ b/index.html
@@ -1,65 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="apple-mobile-web-app-title" content="Portfolio" />
+    <meta name="application-name" content="Portfolio" />
+    <meta
+      name="msapplication-TileColor"
+      content="/favicon/apple-touch-icon.png"
+    />
+    <title>Alana Barrett-Frew Portfolio</title>
 
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
 
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alana Barrett-Frew</title>
-  <link rel="icon" type="image/png" href="/public/favicon/favicon.ico" />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Fuzzy+Bubbles:wght@700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@900&display=swap" rel="stylesheet"/>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon-16x16.png">
-  <link rel="manifest" href="/src/assets/favicon/site.webmanifest">
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/201aa93ea7.js"
+      crossorigin="anonymous"
+    ></script>
 
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="src/assets/styles/pages.css" />
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Portfolio" />
+    <meta
+      property="og:description"
+      content="A portfolio to showcase my work."
+    />
+    <meta property="og:image" content="/favicon/apple-touch-icon.png" />
+    <meta property="og:url" content="alanabarrettfrew.com" />
+    <meta property="og:type" content="website" />
+    <!-- Google tag (gtag.js) -->
+    <!-- <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-CJ2KWDZY3P"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-
-
-
-  <meta name="apple-mobile-web-app-title" content="Alana Barrett-Frew Business Site" />
-  <meta name="application-name" content="Alana Barrett-Frew" />
-  <meta name="msapplication-TileColor" content="#da532c" />
-
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Handlee&display=swap"
-    rel="stylesheet"
-  />
-
-  
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous" />
-  <script src="https://kit.fontawesome.com/201aa93ea7.js" crossorigin="anonymous"></script>
-
-  <!-- Stylesheet -->
-  <link rel="stylesheet" href="src/assets/styles/styles.css" />
- 
-   <!-- Open Graph meta tags -->
-   <meta property="og:title" content="Alana Barrett-Frew" />
-   <meta
-     property="og:description"
-     content="A website showcasing myself and my projects."
-   />
-   <meta property="og:image" content="/public/favicon/apple-touch-icon.png" />
-   <meta property="og:url" content="alanabarrettfrew.com" />
-   <meta property="og:type" content="website" />
-
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VZ5LVL2ETP"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-  
-    gtag('config', 'G-VZ5LVL2ETP');
-  </script>
+      gtag("config", "G-CJ2KWDZY3P");
+    </script> -->
   </head>
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
