--- a/index.html
+++ b/index.html
@@ -34,10 +34,22 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Fuzzy+Bubbles:wght@700&display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@900&display=swap" rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat&family=Fuzzy+Bubbles:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@900&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Font Awesome -->
     <link
@@ -62,9 +74,9 @@
     <meta property="og:url" content="alanabarrettfrew.com" />
     <meta property="og:type" content="website" />
     <!-- Google tag (gtag.js) -->
-    <!-- <script
+    <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-CJ2KWDZY3P"
+      src="https://www.googletagmanager.com/gtag/js?id=G-VZ5LVL2ETP"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -73,8 +85,8 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-CJ2KWDZY3P");
-    </script> -->
+      gtag("config", "G-VZ5LVL2ETP");
+    </script>
   </head>
 
   <body>
